some fix with undo/redo operation, change language, change size, add bar menu

--- a/MiniPaint/MiniPaint.csproj
+++ b/MiniPaint/MiniPaint.csproj
@@ -51,10 +51,28 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="Lang\langResource.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>langResource.resx</DependentUpon>
+    </Compile>
+    <Compile Include="Lang\langResourcePl.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>langResourcePl.resx</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Lang\langResource.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>langResource.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Lang\langResourcePl.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>langResourcePl.Designer.cs</LastGenOutput>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
