--- a/MiniPaint/MiniPaint.csproj
+++ b/MiniPaint/MiniPaint.csproj
@@ -96,5 +96,11 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\IPlugin\IPlugin.csproj">
+      <Project>{7DC55E42-D001-48AF-A0FD-C5340D25F40A}</Project>
+      <Name>IPlugin</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
